# fontview

./: .gitignore  AUTHORS  Makefile  Makefile.am  README  README.md  TODO  autogen.sh  configure.ac  configure.in  dpi-calc.txt  font-model.c  font-model.h  font-view.c  font-view.h  fontview.desktop.in  fontview.gresource.xml  infowindow.ui  main.c  mainwindow.ui  meson.build
data/: Makefile.am  fontview.desktop.in  infowindow.ui  mainwindow.ui
po/: LINGUAS  Makevars  POTFILES.in  ar.po  ca.po  es.po  fontview.pot
src/: Makefile.am  font-model.c  font-model.h  font-view.c  font-view.h  font-view.ui  infowindow.ui  main.c  mainwindow.glade  mainwindow.ui
src/resources/: infowindow.ui  mainwindow.ui
