AC_PREREQ(2.53)
AC_INIT(src/main.c)
PACKAGE=fontview
VERSION=0.10
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
AM_SILENT_RULES([yes])
AM_CONFIG_HEADER(config.h)

CFLAGS=

AC_PROG_CC
AC_HEADER_STDC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB

AM_PROG_CC_C_O

AC_LANG_C


AM_PATH_GTK_2_0(2.16.0)

AC_SUBST(CFLAGS)
PKG_CHECK_MODULES(FONTVIEW, freetype2 >= 9.10.0)
AC_C_CONST

GETTEXT_PACKAGE=$PACKAGE
AC_SUBST(GETTEXT_PACKAGE)
IT_PROG_INTLTOOL(0.41)
AM_GLIB_GNU_GETTEXT

AC_OUTPUT(
	  Makefile
	  src/Makefile
	  po/Makefile.in
	  )
