AC_PREREQ([2.68])
AC_INIT([fontview], [0.10])
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE
AM_SILENT_RULES([yes])

CFLAGS=

AC_PROG_CC
AC_PROG_CC_C99
AC_HEADER_STDC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB

AM_PROG_CC_C_O

AC_LANG([C])


AC_SUBST(CFLAGS)
PKG_CHECK_MODULES(FONTVIEW, [gtk+-3.0 >= 3.0.0 freetype2 >= 9.10.0 harfbuzz >= 0.6.0])
AC_C_CONST

GETTEXT_PACKAGE=AC_PACKAGE_NAME
AC_SUBST(GETTEXT_PACKAGE)
IT_PROG_INTLTOOL(0.41)
AM_GLIB_GNU_GETTEXT

AC_CONFIG_FILES([Makefile
	  src/Makefile
	  data/Makefile
	  po/Makefile.in
	  ])
AC_OUTPUT
