AC_INIT(src/main.c)
AM_INIT_AUTOMAKE(fv,0.0.1)
AM_CONFIG_HEADER(config.h)

CFLAGS=

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_HEADER_STDC

AC_LANG_C


AM_PATH_GTK_2_0(2.8.0)

AC_SUBST(CFLAGS)
PKG_CHECK_MODULES(FONTVIEW, libglade-2.0 >= 2.4.0 freetype2 >= 9.10.0)
AC_C_CONST


AC_OUTPUT(Makefile src/Makefile)
