AC_PREREQ(2.53)
AC_INIT(src/main.c)
PACKAGE=fv
VERSION=0.9
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
AM_CONFIG_HEADER(config.h)

CFLAGS=

AC_PROG_CC
AC_HEADER_STDC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB

AC_LANG_C


AM_PATH_GTK_2_0(2.16.0)

AC_SUBST(CFLAGS)
PKG_CHECK_MODULES(FONTVIEW, freetype2 >= 9.10.0)
AC_C_CONST

IT_PROG_INTLTOOL(0.41)
AM_GLIB_GNU_GETTEXT

AC_OUTPUT(
	  Makefile
	  src/Makefile
	  po/Makefile.in
	  )
